# click-wrapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
click_wrapper/: __init__.py  cli.py  cli_utils.py  generator.py  importer.py  inspector.py  parser.py  runner.py  utils.py  wrapper.py
tests/: conftest.py  test_click_wrapper.py  test_utils.py
